// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownContainer should be rendered correctly 1`] = `
<div
  className="uui-dropdown-body root background-white -lock-focus containerPopover uui-dropdown-container container"
  style={
    Object {
      "maxWidth": undefined,
      "minHeight": undefined,
      "minWidth": undefined,
    }
  }
  tabIndex={0}
>
  <button
    className="container uui-button-box uui-enabled button-color-blue root size-36 fill-solid"
    href={null}
    onClick={[Function]}
    role="button"
    tabIndex={-1}
  />
</div>
`;

exports[`DropdownContainer should be rendered correctly 2`] = `
<div
  className="uui-dropdown-body root background-gray70 -lock-focus containerPopover uui-dropdown-container container"
  style={
    Object {
      "maxWidth": undefined,
      "minHeight": 600,
      "minWidth": 300,
    }
  }
  tabIndex={0}
>
  <button
    className="container uui-button-box uui-enabled button-color-blue root size-36 fill-solid"
    href={null}
    onClick={[Function]}
    role="button"
    tabIndex={-1}
  />
</div>
`;
